Initial commit - PWA

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- FAVICON & PWA -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+
+    <!-- PWA META -->
+    <meta name="theme-color" content="#4f46e5" />
+    <meta name="description" content="Réussis ton BEPC avec KodaSchool : cours vidéo, quiz et exercices interactifs." />
+
+    <!-- RESPONSIVE -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <title>KodaSchool – Réussite BEPC</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
