--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
-<!doctype html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
 
-    <!-- FAVICON & PWA -->
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+  <!-- FAVICON & PWA -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/pwa-192x192.png" />
 
-    <!-- PWA META -->
-    <meta name="theme-color" content="#4f46e5" />
-    <meta name="description" content="Réussis ton BEPC avec KodaSchool : cours vidéo, quiz et exercices interactifs." />
+  <!-- MANIFEST PWA -->
+  <link rel="manifest" href="/manifest.json" />
 
-    <!-- RESPONSIVE -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- PWA META -->
+  <meta name="theme-color" content="#4f46e5" />
+  <meta name="description" content="Réussis ton BEPC avec KodaSchool : cours vidéo, quiz et exercices interactifs." />
 
-    <title>KodaSchool – Réussite BEPC</title>
-  </head>
+  <!-- RESPONSIVE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <title>KodaSchool – Réussite BEPC</title>
+</head>
