--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<head>
-  <meta charset="UTF-8" />
-
-  <!-- FAVICON & PWA -->
-  <link rel="icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/pwa-192x192.png" />
-
-  <!-- MANIFEST PWA -->
-  <link rel="manifest" href="/manifest.json" />
-
-  <!-- PWA META -->
-  <meta name="theme-color" content="#4f46e5" />
-  <meta name="description" content="Réussis ton BEPC avec KodaSchool : cours vidéo, quiz et exercices interactifs." />
-
-  <!-- RESPONSIVE -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>KodaSchool – Réussite BEPC</title>
-</head>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KodaSchool – Test</title>
+    <link rel="icon" href="/favicon.ico" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
